--- a/levelviewer/Main/Main2010.csproj
+++ b/levelviewer/Main/Main2010.csproj
@@ -73,7 +73,7 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="SlimDX, Version=2.0.11.43, Culture=neutral, PublicKeyToken=b1b0c32fd1ffe4f9, processorArchitecture=AMD64" />
+    <Reference Include="SlimDX, Version=2.0.13.43, Culture=neutral, PublicKeyToken=b1b0c32fd1ffe4f9, processorArchitecture=AMD64" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -88,6 +88,7 @@
   <ItemGroup>
     <Compile Include="Console.cs" />
     <Compile Include="FileSystem\barn.cs" />
+    <Compile Include="FileSystem\BetterBarn.cs" />
     <Compile Include="FileSystem\FileSystem.cs" />
     <Compile Include="Game\Actor.cs" />
     <Compile Include="Game\ActorPathfinder.cs" />
