fixed handling of invalid compression values
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@429 80473309-fabf-408f-887a-d98baf40245d

--- a/libbarn/libbarn2012.vcxproj
+++ b/libbarn/libbarn2012.vcxproj
@@ -103,7 +103,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>include;$(ProjectDir)..\Lib\lzo;$(ProjectDir)..\Lib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;$(ProjectDir)..\Lib\lzo\include\lzo;$(ProjectDir)..\Lib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>false</MinimalRebuild>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
