added case priorities
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@432 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main2010.csproj
+++ b/levelviewer/Main/Main2010.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Game\AnimationResource.cs" />
     <Compile Include="Game\Animator.cs" />
     <Compile Include="Game\AnmResource.cs" />
+    <Compile Include="Game\Case.cs" />
     <Compile Include="Game\CommonStrings.cs" />
     <Compile Include="Game\DialogManager.cs" />
     <Compile Include="Game\FaceDefinitions.cs" />
