--- a/sheep/sheep_test/sheep_test2012.vcxproj.filters
+++ b/sheep/sheep_test/sheep_test2012.vcxproj.filters
@@ -16,5 +16,8 @@
     <ClCompile Include="Tests\test.cpp">
       <Filter>Tests</Filter>
     </ClCompile>
+    <ClCompile Include="CppTests.cpp">
+      <Filter>Tests</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
