--- a/sheep/sheepc2012.vcxproj.filters
+++ b/sheep/sheepc2012.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="sheepScanner.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sheepContextTree.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="rbuffer.h">
