--- a/sheep/sheepc2012.vcxproj
+++ b/sheep/sheepc2012.vcxproj
@@ -173,39 +173,17 @@ rem flex -osheepScanner.cpp sheepScanner.l
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="sheepCodeGenerator.cpp" />
-    <ClCompile Include="sheepCodeTree.cpp" />
-    <ClCompile Include="sheepCompiler.cpp" />
-    <ClCompile Include="sheepContextTree.cpp" />
-    <ClCompile Include="sheepDisassembler.cpp" />
-    <ClCompile Include="sheepFileReader.cpp" />
-    <ClCompile Include="sheepFileWriter.cpp" />
-    <ClCompile Include="sheepMachine.cpp" />
     <ClCompile Include="sheepMain.cpp" />
-    <ClCompile Include="sheepMemoryAllocator.cpp" />
-    <ClCompile Include="sheepParser.cpp" />
-    <ClCompile Include="sheepScanner.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="rbuffer.h" />
     <ClInclude Include="sheepc.h" />
-    <ClInclude Include="sheepCodeBuffer.h" />
-    <ClInclude Include="sheepCodeGenerator.h" />
-    <ClInclude Include="sheepCodeTree.h" />
-    <ClInclude Include="sheepDisassembler.h" />
     <ClInclude Include="sheepException.h" />
-    <ClInclude Include="sheepfile.h" />
-    <ClInclude Include="sheepFileReader.h" />
-    <ClInclude Include="sheepFileWriter.h" />
-    <ClInclude Include="sheepImportTable.h" />
-    <ClInclude Include="sheepLog.h" />
-    <ClInclude Include="sheepMachine.h" />
-    <ClInclude Include="sheepScanner.h" />
-    <ClInclude Include="sheepTypes.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="sheepParser.y" />
-    <None Include="sheepScanner.l" />
+    <ProjectReference Include="sheep2012.vcxproj">
+      <Project>{91b41b87-3404-4d66-a842-adc31948ca9f}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
