Fixed some g++ build errors
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@455 80473309-fabf-408f-887a-d98baf40245d

--- a/sheep/makefile
+++ b/sheep/makefile
@@ -5,20 +5,20 @@ COMPILER_FLAGS= -g -std=c++11
 LINKER_FLAGS=
 EXECUTABLE=parser
 
-SOURCES = sheepScanner.cpp sheepParser.cpp sheepCodeGenerator.cpp sheepCodeTree.cpp sheepFileWriter.cpp sheepFileReader.cpp sheepMachine.cpp sheepMain.cpp sheepCompiler.cpp sheepDisassembler.cpp sheepMemoryAllocator.cpp
+SOURCES = sheepScanner.cpp sheepParser.cpp sheepCodeGenerator.cpp sheepCodeTree.cpp sheepContextTree.cpp sheepFileWriter.cpp sheepFileReader.cpp sheepMachine.cpp sheepMain.cpp sheepCompiler.cpp sheepDisassembler.cpp sheepMemoryAllocator.cpp sheepcpp.cpp Internal/compiler.cpp Internal/script.cpp
 OBJECTS = $(SOURCES:.cpp=.o)
 
 $(EXECUTABLE): $(OBJECTS)
 	$(LINKER) $(LINKER_FLAGS) $(OBJECTS) -o $@
 	
-sheepScanner.cpp:
+%.o: %.cpp
+	$(CPPC) $(COMPILER_FLAGS) -c $< -o $@
+	
+sheepScanner.cpp: sheepScanner.l
 	flex -i -o sheepScanner.cpp sheepScanner.l
 	
-sheepParser.cpp: sheepScanner.cpp
+sheepParser.cpp: sheepParser.y
 	bison -d -o sheepParser.cpp sheepParser.y
-	
-.cpp.o:
-	$(CPPC) $(COMPILER_FLAGS) -c $< -o $@
 	
 clean:
 	rm $(EXECUTABLE)
