oops, forgot these
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@462 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Game/Game2010.csproj
+++ b/levelviewer/Game/Game2010.csproj
@@ -83,8 +83,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Console.cs" />
     <Compile Include="Direct3D9RenderWindow.cs" />
     <Compile Include="Input.cs" />
+    <Compile Include="Input\Keyboard.cs" />
     <Compile Include="MonoMain.cs" />
     <Compile Include="OpenGLRenderWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
