rewrote much of the sound engine to get WaitHandles based on sounds to be more "push" rather than relying on polling
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@463 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main2010.csproj
+++ b/levelviewer/Main/Main2010.csproj
@@ -171,7 +171,11 @@
     <Compile Include="Settings.cs" />
     <Compile Include="Sheep\BasicSheepFunctions.cs" />
     <Compile Include="Sheep\Sheep.cs" />
+    <Compile Include="Sound\AudioEngine\AudioManager.cs" />
+    <Compile Include="Sound\AudioEngine\SoundEffect.cs" />
+    <Compile Include="Sound\AudioEngine\SoundEffectInstance.cs" />
     <Compile Include="Sound\Mp3Decoder.cs" />
+    <Compile Include="Sound\AudioEngine\OpenALWrapper.cs" />
     <Compile Include="Sound\Sound.cs" />
     <Compile Include="Sound\SoundManager.cs" />
     <Compile Include="Sound\SoundTrackResource.cs" />
