More work on getting everything to build easier
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@493 80473309-fabf-408f-887a-d98baf40245d

--- a/build.xml
+++ b/build.xml
@@ -80,6 +80,13 @@
 		/>
 	</Target>
 	<Target Name="Sheep">
+	
+		<Copy
+			Condition="!Exists('sheep/sheepParser.cpp')"
+			SourceFiles="sheep/extra/sheepParser.cpp;sheep/extra/sheepParser.hpp;sheep/extra/sheepScanner.cpp"
+			DestinationFolder="sheep"
+		/>
+	
 		<MSBuild
 			Projects="sheep/sheep2015.vcxproj"
 			Properties="Configuration=Release"
